tests/ui/bool_comparison.stderr
error: equality checks against true are unnecessary
 --> $DIR/bool_comparison.rs:7:8
  |
7 |     if x == true { "yes" } else { "no" };
  |        ^^^^^^^^^
  |
note: lint level defined here
 --> $DIR/bool_comparison.rs:4:8
  |
4 | #[deny(bool_comparison)]
  |        ^^^^^^^^^^^^^^^
help: try simplifying it as shown:
  |     if x { "yes" } else { "no" };

error: equality checks against false can be replaced by a negation
  --> $DIR/bool_comparison.rs:11:8
   |
11 |     if x == false { "yes" } else { "no" };
   |        ^^^^^^^^^^
   |
help: try simplifying it as shown:
   |     if !x { "yes" } else { "no" };

error: equality checks against true are unnecessary
  --> $DIR/bool_comparison.rs:15:8
   |
15 |     if true == x { "yes" } else { "no" };
   |        ^^^^^^^^^
   |
help: try simplifying it as shown:
   |     if x { "yes" } else { "no" };

error: equality checks against false can be replaced by a negation
  --> $DIR/bool_comparison.rs:19:8
   |
19 |     if false == x { "yes" } else { "no" };
   |        ^^^^^^^^^^
   |
help: try simplifying it as shown:
   |     if !x { "yes" } else { "no" };

error: aborting due to 4 previous errors

